# Compaqt

./: CMakeLists.txt  README.md
patches/: 0001-UseDllExportInStatic.patch  0002-UnifyExceptionHandling.patch  0003-FixStyleSheetFeatures.patch
